// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox/presenters/CheckPresenter renders with all props 1`] = `
<span
  className="hig__checkbox__wrapper hig__checkbox__wrapper--checked hig__checkbox__wrapper--disabled"
>
  <span
    className="hig__checkbox__wrapper__check"
  >
    <svg
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3z"
      />
    </svg>
  </span>
  <span
    className="hig__checkbox__wrapper__check--indeterminate"
  >
    <svg
      height="2"
      viewBox="0 0 8 2"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Rectangle 11
      </title>
      <path
        d="M0 0h8v2H0z"
        fill="#FFF"
        fillRule="evenodd"
      />
    </svg>
  </span>
  <span
    className="hig__checkbox__wrapper__check--disabled"
  >
    <svg
      height="8"
      viewBox="0 0 10 8"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Group 4
      </title>
      <path
        d="M3.95 7.588L1 4.743l.915-.946 2.02 1.935L8.537 1l.933.928z"
        fill="#D1DDEE"
        fillRule="evenodd"
        stroke="#D1DDEE"
        strokeWidth=".5"
      />
    </svg>
  </span>
</span>
`;

exports[`checkbox/presenters/CheckPresenter renders without props 1`] = `
<span
  className="hig__checkbox__wrapper"
>
  <span
    className="hig__checkbox__wrapper__check"
  >
    <svg
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3z"
      />
    </svg>
  </span>
  <span
    className="hig__checkbox__wrapper__check--indeterminate"
  >
    <svg
      height="2"
      viewBox="0 0 8 2"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Rectangle 11
      </title>
      <path
        d="M0 0h8v2H0z"
        fill="#FFF"
        fillRule="evenodd"
      />
    </svg>
  </span>
  <span
    className="hig__checkbox__wrapper__check--disabled"
  >
    <svg
      height="8"
      viewBox="0 0 10 8"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Group 4
      </title>
      <path
        d="M3.95 7.588L1 4.743l.915-.946 2.02 1.935L8.537 1l.933.928z"
        fill="#D1DDEE"
        fillRule="evenodd"
        stroke="#D1DDEE"
        strokeWidth=".5"
      />
    </svg>
  </span>
</span>
`;
